style.css
:root {
  --marvel-red: #ec1d24
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-family: sans-serif;
  background-color: black;
}
#sidebar {
  width: 300px;
  height: 100%;
  margin: 0;
  overflow: hidden;
  font-family: monospace;
  font-size: 12px;
  background-color: #222;
  color: dimgrey;
  float: left;
  text-align: center;
}
h1 {
  font-size: 26px;
  background-color: var(--marvel-red);
  color: white;
  padding: 10px 0px;
  margin: 0px 0px 10px 0px;
}
h2 {
  font-size: 16px;
  color: var(--marvel-red);
  margin: 0;
}
#explanations {
  clear: both;
  margin-top: 5px;
  padding: 5px 3px 0px 3px;
  overflow-y: auto;
  max-height: 60%;
  line-height: 13px;
}
#explanations p {
  margin: 7px;
}
#order {
  min-width: 20px;
  display: inline-block;
}
#clusters-legend b span {
  white-space: nowrap;
}
#node-details {
  clear: both;
  margin-top: 4px;
  padding: 5px;
  text-align: center;
  overflow-y: auto;
  max-height: 60%;
  border-top: 1px solid #555;
  line-height: 13px;
}
#node-label {
  margin: 7px 0px;
  width: 100%;
}
#node-img {
  max-width: 75%;
  max-height: 400px;
  cursor: pointer;
}
#node-extra {
}
#sidebar a, #sidebar a:visited {
  color: #af4f4f;
}
#footer {
  position: absolute;
  bottom: 0px;
  width: 300px;
  line-height: 13px;
}
#footer p {
  font-size: 11px;
  padding: 2px 0px 7px 0px;
  border-top: 1px solid #555;
  margin: 0;
}
#sigma-container {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
}
#sigma-container canvas {
  display: none;
}
#clusters-layer {
  width: 100%;
  height: 100%;
  position: absolute;
}
.clusterLabel {
  position: absolute;
  transform: translate(-50%, -50%);
  text-transform: lowercase;
  font-family: monospace;
  font-variant: small-caps;
  font-weight: bold;
  font-size: 1.3rem;
  padding: 0px 6px 2px 6px;
  background-color: rgba(0, 0, 0, 0.75);
  border-radius: 14px;
}
#loader {
  position: absolute;
  top: 45%;
  left: 62%;
  z-index: 10;
  display: none;
}
#loader img {
  padding: 10px;
  opacity: 0.85;
}
#modal {
  position: absolute;
  top: 2%;
  left: 2%;
  width: 96%;
  height: 96%;
  z-index: 10;
  display: none;
  background-color: rgba(0, 0, 0, 0.75);
  text-align: center;
  border-radius: 10px;
  cursor: pointer;
}
#modal-img {
  padding: 10px;
  max-width: 99%;
  max-height: 99%;
  z-index: 20;
}
#controls {
  position: absolute;
  top: 1em;
  text-align: center;
  width: 150px;
}
#sigma-buttons {
  display: flex;
  vertical-align: middle;
}
#sigma-buttons button {
  flex: auto;
  width: 33px;
  height: 33px;
  margin: 2px;
  background: white;
  outline: none;
  border: 1px solid dimgrey;
  cursor: pointer;
  font-size: 15px;
  font-family: monospace;
  font-weight: bold;
  padding: 0;
}
#sigma-buttons button img {
  width: 20px;
  margin-top: 2px;
}
#regscreen {
  display: none;
}
#fullscreen {
  display: block;
}
@media all and (display-mode: fullscreen) {
  #regscreen {
    display: block;
  }
  #fullscreen {
    display: none;
  }
}
#search {
  margin: 2px;
}
#search input {
  width: 100%;
  padding: 5px;
  text-align: center;
  font-family: monospace;
  font-size: 14px;
}
#suggestions-select {
  display: none;
  width: 146px;
}
/* -------- Switch Styles ------------*/
.choices .network-choice:last-child {
  margin-bottom: 0;
}
.choices .network-choice:first-child {
  margin-top: 0;
}
.choices {
  margin: 15px 0;
}
.network-choice{
  display: flex;
  justify-content: center;
  position:relative;
  width: 100%; 
  margin-bottom: 10px;
  height: 1.8rem;
}
label, .toggle {
  height: 100%;
  border-radius: 100px;
}
label {
  display: block;
  width: 210px;
  background-color: white;
  border-radius: 100px;
  position: relative;
  margin-bottom: 1rem;
  cursor: pointer;
}
.toggle {
  position: absolute;
  width: 103px;
  background-color: var(--marvel-red);
  transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin: -2px 0 0 -2px;
  border: 2px solid #222;
}
.names {
  font-size: 90%;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: space-around;
  align-items: center;
  user-select: none;
}
.names > div {
  font-size: 14px;
  font-family: monospace;
  font-weight: bold;
  text-transform: uppercase;
}
.left, .right{
  width: 50%;
  text-align: center;
}
[type="checkbox"] {
  display: none;
}
/* Toggle */
[type="checkbox"]:checked + .network-switch-label .toggle {
  transform: translateX(100%);
}
.left {
  color: white;
}
.right {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .left {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .right {
  color: white;
}
#rotate-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  display: none;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
}
#rotate-modal h1 {
  font-size: 30px;
}
#rotate-modal img {
  position: relative;
  top: 25%;
  left: 0;
  max-width: 45%;
}
#rotate-modal p {
  display: block;
  position: absolute;
  bottom: 20%;
  left: 25%;
  width: 50%;
  background-color: var(--marvel-red);
  color: white;
  font-size: 20px;
  font-family: monospace;
  text-transform: uppercase;
  font-weight: bold;
  padding: 10px 0px;
}
@media (orientation: portrait) {
  #rotate-modal {
    display: block;
  }
  #sidebar, #controls {
    display: none;
  }
}
.credits-short {
  display: none;
}
.credits-full, #title {
  display: block;
}
@media (max-width: 700px) {
  #sidebar, #footer {
    width: 200px;
  }
  h1 {
    font-size: 18px;
  }
  .choices {
    margin: 5px 0;
  }
  label {
    width: 180px;
  }
  .toggle {
    width: 88px;
  }
  .names > div {
    font-size: 12px;
  }
}
@media (max-height: 600px) {
  .choices {
    margin: 5px 0;
  }
  .credits-short {
    display: block;
  }
  .credits-full, .asterisk, #title {
    display: none;
  }
}
@media not (pointer: coarse) {
  #sidebar {
    margin-right: 2px;
  }
  #controls {
    right: 1em;
  }
}
@media (pointer: coarse) {
  #sidebar {
    float: right;
    margin-left: 2px;
  }
  #controls {
    left: 1em;
  }
  #loader {
    left: 35%;
  }
  #search input {
    display: none;
  }
  #suggestions-select {
    display: block;
  }
}

